--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-<h1>Hello Lumines Shoes</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>TrinkLee</title>
+  <style>
+    body {
+    background: black;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    letter-spacing: 2px;
+}
+
+img {
+    border-radius: 50%;
+  }
+
+.profile-picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    height: auto;
+    max-width: 100px;
+  }
+
+.profile-name {
+      text-align: center;
+      padding: 30px;
+  }
+
+.links {
+      text-align: center;
+      margin-top: 20px;
+      padding: 20px;
+      border: 1px solid white;
+      border-width: 2px;
+      width: 290px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 40px;
+  }
+
+a {
+    text-decoration: none;
+    color: white;
+    transition: color 1s; 
+}
+
+.bottom-text {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+a:hover {
+    color: #000;
+    background: #fff;
+}
+  </style>
+</head>
+<body>
+    
+    <!-- Profile picture-->
+    <img src="assets/profile-picture.jpg" alt="profile picture" class="profile-picture">
+
+    <!-- Profile name-->
+    <div class="profile-name">@justaname</div>
+
+    <!-- Links-->
+        <a href="#" class="links">SNEAKER STORE</a>
+        <a href="#" class="links">NEW ALBUM</a>
+        <a href="#" class="links">IG</a>
+        <a href="#" class="links">TWITTER</a>
+        <a href="#" class="links">YOUTUBE</a>
+
+    <div class="bottom-text">Trinklee</div>
+ 
+</body>
+</html>
