--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@ a:hover {
 <body>
     
     <!-- Profile picture-->
-    <img src="assets/profile-picture.jpg" alt="profile picture" class="profile-picture">
+    <img src="shoes.png" alt="profile picture" class="profile-picture">
 
     <!-- Profile name-->
-    <div class="profile-name">@justaname</div>
+    <div class="profile-name">@lumine_shoes</div>
 
     <!-- Links-->
-        <a href="#" class="links">SNEAKER STORE</a>
-        <a href="#" class="links">NEW ALBUM</a>
-        <a href="#" class="links">IG</a>
-        <a href="#" class="links">TWITTER</a>
-        <a href="#" class="links">YOUTUBE</a>
+        <a href="#" class="links">TOKOPEDIA</a>
+        <a href="#" class="links">SHOPEE</a>
+        <a href="#" class="links">WEBSITE</a>
+        <a href="#" class="links">WHATSAPP</a>
+        <a href="#" class="links">TELEGRAM</a>
 
-    <div class="bottom-text">Trinklee</div>
+    <div class="bottom-text">Lumine Shop</div>
  
 </body>
 </html>
