--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ a:hover {
     <div class="profile-name">@lumine_shoes</div>
 
     <!-- Links-->
-        <a href="#" class="links">TOKOPEDIA</a>
+        <a href="https://www.tokopedia.com/lumineshoes" class="links">TOKOPEDIA</a>
         <a href="#" class="links">SHOPEE</a>
         <a href="#" class="links">WEBSITE</a>
-        <a href="#" class="links">WHATSAPP</a>
+        <a href="https://api.whatsapp.com/send?phone=+62895627637701" class="links">WHATSAPP</a>
         <a href="#" class="links">TELEGRAM</a>
 
     <div class="bottom-text">Lumine Shop</div>
