--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ a:hover {
 
     <!-- Links-->
         <a href="https://www.tokopedia.com/lumineshoes" class="links">TOKOPEDIA</a>
-        <a href="#" class="links">SHOPEE</a>
+        <a href="https://shopee.co.id/lumine_shoes" class="links">SHOPEE</a>
         <a href="#" class="links">WEBSITE</a>
         <a href="https://api.whatsapp.com/send?phone=+62895627637701" class="links">WHATSAPP</a>
-        <a href="#" class="links">TELEGRAM</a>
+        <a href="https://t.me/rahmatbeny" class="links">TELEGRAM</a>
 
     <div class="bottom-text">Lumine Shop</div>
  
